--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ h1 {
 }
 .buttonChoices button:hover {
     cursor: pointer;
+    border-color: bisque;
 }
  
 button {
@@ -38,4 +39,8 @@ img {
 #resultDisplay {
     font-size: 4.6rem;
     margin: 30px 0;
+}
+
+.scoreDisplay {
+    font-size: 1.8rem;
 }
